--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,11 +1,11 @@
-.Auth-form {
+.authForm {
     width: 420px;
     padding-top: 30px;
     padding-bottom: 20px;
     border-radius: 8px;
   }  
 
-.Auth-form-content {
+.authFormContent {
     padding-left: 12%;
     padding-right: 12%;
   }
