--- a/src/components/Details/PostDetails.module.css
+++ b/src/components/Details/PostDetails.module.css
@@ -29,8 +29,15 @@
 .pointOfInterestDetailsContent {
     border: 1px solid #314a36;
     border-radius: 5px;
-    margin-top: 20px;
-    padding: 20px;
+    margin-top: 10px;
+    padding: 10px;
+}
+
+.pointOfInterestDetailsContent p {
+    color: #011305;
+    margin: 0px;
+    word-wrap: break-word;
+    white-space: pre-line;
 }
 
 .pointOfInterestDetailsContent button {
@@ -59,4 +66,56 @@
 
 .buttons .icon {
     margin-right: 5px;
+}
+
+
+.comments {
+    width: 100%;
+    height: 100px;
+    background-color: rgb(170, 74, 146);
+    margin: 25px auto;
+    padding: 10px;
+}
+
+.comments p {
+    color: #f9fcf9;
+}
+
+
+.noComments p{
+    color: #011405;
+    display: inline;
+    margin-right: 5px;
+}
+
+.commentForm {
+    overflow: hidden;
+}
+
+
+.commentForm textarea{
+    border: none;
+    background-color: #f1f1f1;
+    color: black;
+    border-radius: 5px;
+    line-height: 2em;
+    display: block;
+    margin: 10px auto;
+    width: calc(100% - 26px);
+    padding-left: 20px;
+    padding-top: 10px;
+    height: 200px;
+
+}
+
+.commentForm input[name="Submit"] {
+    font-size: 20px;
+    padding: 5px 10px;
+    border: none;
+    background-color: #a72d92;
+    border-radius: 5px;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
 }
