add Create and Edit styles

--- a/src/components/Edit/PostEdit.module.css
+++ b/src/components/Edit/PostEdit.module.css
@@ -1,7 +1,6 @@
-.editHeading {
+.createHeading {
     text-align: center;
     margin-bottom: 0px;
-    color: black;
 }
 
 .createForm {
@@ -11,18 +10,19 @@
 }
 
 .createForm label{
-    color: #314a36;
+    color: #321533;
     font-size: 18px;
 }
 
 .createForm input{
     border: none;
-    background-color: #dd6060;
+    background-color: #f1f1f1;
+    color: black;
     border-radius: 5px;
     line-height: 50px;
     display: block;
     margin: 10px auto;
-    width: calc(100% - 20px);
+    width: calc(100% - 26px);
     padding-left: 20px;
 }
 
@@ -30,9 +30,9 @@
     margin: 30px 0;
     font-size: 20px;
     border: none;
-    background-color: #D9483C;
+    background-color: #851b55;
     border-radius: 5px;
-    color: #f8e6d3;
+    color: #1a1320;
     cursor: pointer;
     width: calc(100% - 20px);
     padding: 13px 0;
@@ -43,18 +43,23 @@
 }
 
 .submitBtn:disabled {
-    background-color: #CCC;
+    background-color: #9B3148;
     filter: none;
     cursor: default;
 }
 
 .createForm textarea{
-    width: 100%;
+    width: calc(100% - 26px);
     height: 150px;
     margin: 10px auto;
     border-radius: 5px;
     background-color: #f1f1f1;
+    color: black;
     border: none;
+    padding-left: 20px;
+    padding-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 2px;
 }
 
 .createForm input[type="checkbox"]{
@@ -63,8 +68,45 @@
     margin-right: 5px;
 }
 
+.createForm input[name="Edit"] {
+    font-size: 20px;
+    padding: 5px 10px;
+    border: none;
+    background-color: #d6e225;
+    border-radius: 5px;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.backBtn{
+    font-size: 10px;
+    padding: 5px 10px;
+    border: none;
+    background-color: #bd0a37;
+    border-radius: 5px;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
 .mandatory {
     color: #314a36;
     font-size: 14px;
     font-style: italic;
+}
+
+.hint {
+    text-align: center;
+    color: #314a36;
+    font-size: 14px;
+    font-style: italic;
+    margin-top: 0px;
+    margin-bottom: 30px;
+}
+
+.hint a {
+    color: #140b0a;
 }
