--- a/src/components/Create/PostCreate.module.css
+++ b/src/components/Create/PostCreate.module.css
@@ -68,6 +68,30 @@
     margin-right: 5px;
 }
 
+.createForm input[name="Create"] {
+    font-size: 20px;
+    padding: 5px 10px;
+    border: none;
+    background-color: #a72d92;
+    border-radius: 5px;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.backBtn{
+    font-size: 10px;
+    padding: 5px 10px;
+    border: none;
+    background-color: #bd0a37;
+    border-radius: 5px;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
 .mandatory {
     color: #314a36;
     font-size: 14px;
