--- a/src/components/Details/PostDetails.module.css
+++ b/src/components/Details/PostDetails.module.css
@@ -60,7 +60,7 @@
     display: flex;
     margin-top: 20px;
     justify-content: flex-end;
-    border-top: 1px dashed #314a36;
+    border-top: 1px dashed #e8f0e9;
     padding-top: 20px;
 }
 
@@ -113,6 +113,29 @@
     padding: 5px 10px;
     border: none;
     background-color: #a72d92;
+    border-radius: 5px;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.editBtn {
+    font-size: 20px;
+    padding: 5px 10px;
+    border: none;
+    background-color: #d6e225;
+    border-radius: 5px;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+}
+.deleteBtn {
+    font-size: 20px;
+    padding: 5px 10px;
+    border: none;
+    background-color:  #af0917;
     border-radius: 5px;
     color: white;
     font-size: 18px;
